# Facebook-Lead-Ads-Voice-AI-Agent-Qualifier

./: README.md
.github/workflows/: inngest-server.yml  livekit-agent-create.yml  livekit-agent-deploy-automated.yml
inngest-server/: Dockerfile  pyproject.toml  requirements.txt  utils.py
inngest-server/app/: main.py
livekit-voice-agent/: .dockerignore  .gitignore  agent.py  livekit.toml  pyproject.toml  requirements.txt  utils.py
livekit-voice-agent/prompts/: agent_instructions.yaml
